# hf-redteam-env

./: Dockerfile  README.md  inference.py  pyproject.toml
redteam_env/: __init__.py  client.py  models.py  openenv.yaml
redteam_env/openenv_redteam_env.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
redteam_env/server/: Dockerfile  app.py  defender.py  environment.py  grader.py
redteam_env/server/tasks/: __init__.py  base.py  task_easy.py  task_hard.py  task_medium.py
server/: app.py
