[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-redteam-env"
version = "1.0.0"
description = "LLM Red-Teaming Environment — AI agent vs rule-based defender"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true
packages = [
    "redteam_env",
    "redteam_env.server",
    "redteam_env.server.tasks",
]

[tool.setuptools.package-dir]
"redteam_env" = "."
"redteam_env.server" = "server"
"redteam_env.server.tasks" = "server/tasks"
